--- a/app/index.html
+++ b/app/index.html
@@ -26,85 +26,105 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+      
+      <video id='video-overlay' preload='auto' width='100%' height='100%' poster='images/NUVC-logo.png' autoplay>
+        <source src='video/teaser.mov' type='video/mp4'>
+      </video>
 
-        <div class="container-fluid">
-          <header class='row'>
-            <img src='images/NUVC%20logo%20and%20text.png' class='img img-responsive col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-xl-2 col-xl-offset-5'>
-            <i class='fa fa-5x fa-angle-down animated pulse'></i>
-          </header>
-          <hr>
-          <section class='ideas'>
-           <div class='container'>
-              <h1 class='bitter transparent'>WHERE</h1>
-              <h1 class='bitter transparent'>IDEAS WILL</h1>
-              <h1 class='bitter transparent'>BECOME</h1>
-              <h1 class='bitter transparent'>REAL.</h1>
+      <div class="container-fluid">
+        <header class='row'>
+          <img src='images/NUVC-logo.png' class='img img-responsive col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4 col-xl-2 col-xl-offset-5'>
+          <h1 class='col-xs-12 text-center logotype'>Northwestern University Venture Challenge</h1>
+          <i class='fa fa-5x fa-angle-down animated pulse'></i>
+        </header>
+        <hr>
+        <section class='ideas'>
+         <div class='container-fluid'>
+            <h1 class='bitter transparent'>WHERE</h1>
+            <h1 class='bitter transparent'>IDEAS WILL</h1>
+            <h1 class='bitter transparent'>BECOME</h1>
+            <h1 class='bitter transparent'>REAL.</h1>
+          </div>
+        </section>
+        <section class='even'>
+          <div class='container'>
+            <div class='impress transparent'>$150k<small>prizes</small></div>
+            <div class='impress transparent'>48<small>Hours</small></div>
+            <div class='impress transparent'>5<small>tracks</small></div>
+          </div>
+        </section>
+        <section>
+          <div class='container track-section'>
+            <h1>Tracks:</h1>
+            <div class='track transparent'>
+              <h2>Green Energy + Sustainability</h2>
+              <i class='fa fa-leaf'></i>
             </div>
-          </section>
-          <section class='even'>
-            <div class='container'>
-              <div class='impress transparent'>$60k+<small>prizes</small></div>
-              <div class='impress transparent'>48<small>Hours</small></div>
-              <div class='impress transparent'>5<small>tracks</small></div>
+            <div class='track transparent'>
+              <h2>Consumer Products</h2>
+              <i class='fa fa-group'></i>
             </div>
-          </section>
-          <section>
-            <div class='container track-section'>
-              <h1>Tracks:</h1>
-              <h2 class='track transparent'>Green Energy + Sustainability <i class='fa fa-leaf'></i></h2>
-              <h2 class='track transparent'>Consumer Products <i class='fa fa-group'></i></h2>
-              <h2 class='track transparent'>Social Enterprise <i class='fa fa-heart'></i></h2>
-              <h2 class='track transparent'>Business Products <i class='fa fa-briefcase'></i></h2>
-              <h2 class='track transparent'>Life Sciences + Medical <i class='fa fa-flask'></i></h2>
+            <div class='track transparent'>
+              <h2>Social Enterprise</h2>
+              <i class='fa fa-heart'></i>
             </div>
-          </section>
-          <footer>
-            <div class='kellogg'>
-              <img src='images/ftr_lockup_Kellogg.svg'>
+            <div class='track transparent'>
+              <h2>Business Products</h2>
+              <i class='fa fa-briefcase'></i>
             </div>
-            <div class='epic'>
-              <img src='images/EPIC-Icon-Primary-Red.png'>
+            <div class='track transparent'>
+              <h2>Life Sciences + Medical</h2>
+              <i class='fa fa-flask'></i>
             </div>
-            <div class='farley'>
-              <img src='images/farley.png'>
-            </div>
-          </footer>
-        </div>
+          </div>
+        </section>
+        <footer>
+          <div class='kellogg'>
+            <img src='images/ftr_lockup_Kellogg.svg'>
+          </div>
+          <div class='epic'>
+            <img src='images/EPIC-Icon-Primary-Red.png'>
+          </div>
+          <div class='farley'>
+            <img src='images/farley.png'>
+          </div>
+        </footer>
+      </div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+      <script>
+          (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+          function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+          e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+          e.src='//www.google-analytics.com/analytics.js';
+          r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+          ga('create','UA-XXXXX-X');ga('send','pageview');
+      </script>
 
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/jquery-waypoints/waypoints.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
+      <!-- build:js scripts/vendor.js -->
+      <!-- bower:js -->
+      <script src="bower_components/jquery/dist/jquery.js"></script>
+      <script src="bower_components/jquery-waypoints/waypoints.js"></script>
+      <!-- endbower -->
+      <!-- endbuild -->
 
-        <!-- build:js scripts/plugins.js -->
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
-        <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
-        <!-- endbuild -->
+      <!-- build:js scripts/plugins.js -->
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+      <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+      <!-- endbuild -->
 
-        <!-- build:js scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
-</body>
+      <!-- build:js scripts/main.js -->
+      <script src="scripts/main.js"></script>
+      <!-- endbuild -->
+    </body>
 </html>
